# BackEnd

./: .gitignore  .gitmodules  PlanToLearn  repo_notes
AWS/: configure serveless and node  notes
AWS/ADV-IT/: CloudFormation  EC2  S3_SimpleStorageService  VPC  lambda  notes
Algo/: Makefile  main.go
Algo/ArraysHashing/: ContainsDuplicate.go  IsSubsequence.go  ValidAnagram.go  (+3 more)
Books/: .Database Internals A deep-dive into how distributed data systems work (Alex Petrov) (z-lib.org).epub.pdf.icloud  .Systems Performance, 2nd Edition (Brendan Gregg [Brendan Gregg]) (z-lib.org).pdf.icloud  .Высоконагруженные приложения. Программирование, масштабирование, поддержка (Мартин Клеппман) (z-lib.org).pdf.icloud
C++/: .Logging_in_Action_With_Fluentd,_Kubernetes_and_more_Phil_Wilkins.pdf.icloud  Client WEB  In_Depth  lambda idioms
C_IOT/: BLE  PlanToLearn  RTOS
C_IOT/C++/ASIO/samples/async_and_couroutines/: CMakeLists.txt  async_echo_server_coroutines.cpp
DB/: DB_Highload  Indexes  notes_DB
DevOps/: notes
Docker/: notes
Flutter/: notes  projects
Highload/: ACID  C++_notes  DB_Highload  HIGHLOAD_TECHNOSTREAM_VKTeam  SQL_Req_optimizations  TCP_vs_UDP  mail.ru  notes
IOT/: PlanToLearn
Infrastructure/: CORS  Kafka  api_gateway  consistancyInMicroservices  githubCI_CD  howSelectQueueService  network debugging  patterns of reliable systems  patterns of relyable systems  security_moments  корпоративны шиномонтаж
Microservices/: notes
Network/: notes
Security/: OS  SET University  Security of web-apps  microservices
WebTheory/: HTTP  retrieveData
(+784 files in other folders)
